<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.zbam.tajer.ui.register.forgotpassword.ForgotPasswordViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_700">

        <RelativeLayout
            android:id="@+id/rl_forgot_password_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            >

            <ImageButton
                android:id="@+id/ib_forgot_password_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/margin_normal"
                app:srcCompat="@drawable/ic_back"
                android:tint="@color/gray_100"
                android:onClick="@{() -> viewModel.onClickBack()}"
                />

            <TextView
                style="@style/AppTheme.TextViewWhite"
                android:layout_centerInParent="true"
                android:text="@string/forgot_password"
                android:textSize="@dimen/font_size_xlarge" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:layout_below="@+id/rl_forgot_password_toolbar"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.TextViewWhite"
                android:text="@string/caption_forgot_password"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:textSize="@dimen/font_size_large"
                android:gravity="center"/>

            <TextView
                style="@style/AppTheme.TextViewWhite"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_4dp"
                android:layout_marginStart="@dimen/padding_common"
                android:gravity="start"
                android:text="@string/phone_number"
                android:textSize="@dimen/font_size_large"/>

            <EditText
                style="@style/AppTheme.EditText"
                android:id="@+id/edt_forgot_password_phone_number"
                android:inputType="phone"
                android:digits="+0123456789"
                android:hint="@string/hint_phone_number"/>

            <Button
                style="@style/AppTheme.ButtonGray"
                android:id="@+id/btnLogin"
                android:layout_marginTop="@dimen/margin_normal"
                android:onClick="@{() -> viewModel.onClickForgotPassword()}"
                android:text="@string/login"/>

        </LinearLayout>

    </RelativeLayout>
</layout>